# project-Group11

./: .buildinfo  ADM_RATE_SAT_EDA.html  ADM_RATE_SAT_EDA.ipynb  Control_public_vs_private.html  EDA-Race-Diversity-Analysis.html  EDA.html  EDA.ipynb  EDA_1.html  EDA_1.ipynb  EDA_2.html  EDA_3.html  EDA_4.html  EDA_5.html  EDA_6.html  EDA_control_of_school.html  EDA_control_of_school.ipynb  EDA_in_out_state_tuition.html  EDA_in_out_state_tuition.ipynb  EDA_num_var.html  EDA_num_var.ipynb  EDA_parent_edu.html  EDA_parent_edu.ipynb  EDA_program_offered.html  EDA_program_offered.ipynb  EDA_rece_loans.html  EDA_rece_loans.ipynb  Exploratory Analysis.html  Exploratory Analysis.ipynb  Exploratory_Analysis.html  Exploratory_Analysis.ipynb  Exploratory_Data_Analysis.html  LICENSE  LICENSE.html  LICENSE.md  Parent Education.html  Parent_Education.html  Prediction_Analysis.html  Prediction_Analysis.ipynb  Prediction_Analysis_1.html  Prediction_Analysis_1.ipynb  (+28 more)
_build/.doctrees/: Control - public vs private.doctree  (+36 more)
_sources/: ADM_RATE_SAT_EDA.ipynb  EDA-Race-Diversity-Analysis.ipynb  EDA.ipynb  EDA_5.ipynb  EDA_control_of_school.ipynb  EDA_in_out_state_tuition.ipynb  EDA_parent_edu.ipynb  Exploratory Analysis.ipynb  Exploratory_Analysis.ipynb  Exploratory_Data_Analysis.ipynb  Prediction_Analysis.ipynb  Prediction_Analysis_2.ipynb  README.md  Race and Diversity.ipynb  Race_and_Diversity.ipynb  Variable_Analysis.ipynb  in and out state tuition analysis.ipynb  main.ipynb
data/: recent_institution_filtered.html
tools/: __init__.py  setup.cfg  utils.py
tools/tests/: test_utils.py
(+73 files in other folders)
