# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = tools
version          = attr: tools.__version__
author           = UC Berkeley Spring 2023 STAT 159 Group 11 (Janet Choe, Daniel Richards, Connie He, Henry Lam)
author_email     = janetchoe@berkeley.edu, kanglin@berkeley.edu, dnevinrichards@berkeley.edu, hlam0125@berkeley.edu
description      = Provides tools to explore and analyze data from U.S. Department of Education College Scorecard
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires  = >= 3.8.0
install_requires =
	matplotlib==3.6
    numpy==1.23
    pandas==1.5
    scipy==1.10
    seaborn==0.12
    xarray==2023.1
    scikit-learn==1.2
